<resources>
    <string name="activity_training_history_name">История тренировок</string>
    <string name="activity_training_statistics_name">Статистика тренировки</string>
    <string name="activity_training_name">Тренировка</string>
    <string name="time_left">осталось времени</string>
    <string name="next">Следующий</string>
    <string name="stop">Закончить</string>
    <string name="activity_start_page_name">Начальная страница</string>
    <string name="activity_create_presentation_name">Добавление презентации</string>
    <string name="activity_edit_presentation_name">Добавление новой презентации</string>
    <string name="time_limit">Ограничение времени на доклад (минут)</string>
    <string name="notifications">Уведомления</string>
    <string name="presentation_date">Дата доклада</string>
...
    <string name="average_speed">Средняя скорость: </string>
    <string name="best_slide">Лучший слайд: </string>
    <string name="worst_slide">Худший слайд: </string>
    <string name="speech_speed_units">слов/мин</string>
    <string name="training_time">Время тренировки:</string>
    <string name="count_of_slides">Слайдов рассказано:</string>
    <string name="word_share_of_parasites">Доля слов паразитов:</string>
    <string name="percent">%</string>
    <string name="zero_sec">00 min: 00 sec</string>
    <string name="first_sec">00 min: 01 sec</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
...
    <string name="pref_title_enable_deb_pres">Включить тестовые презентации</string>
    <string name="deb_speech_audio_key">deb_speech_audio</string>
    <string name="speed_key">speed_key</string>
    <string name="pref_title_enable_deb_speech_audio">Включить тестовую звуковую дорожку</string>
    <string name="deb_pres">Отладочная презентация</string>
    <string name="deb_pres_name">making_presentation.pdf</string>
    <string name="first_debug_presentation_name">making_first_presentation</string>
    <string name="second_debug_presentation_name">making_second_presentation</string>
    <string name="set_number_into_NP">Set the passed number into the NumberPicker</string>
    <string name="first_debug_time">01 min: 00 sec</string>
    <string name="second_debug_time">02 min: 00 sec</string>
    <string name="edit">"Редактировать"</string>

    <string name="making_presentation">making_presentation</string>

    <string name="pref_title_display_name">Имя пользователя</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Желательный темп речи</string>

...
    <string name="CHANGE_FILE_FLAG">change_file_flag</string>
    <string name="CURRENT_TRAINING_ID">current_training_id</string>
    <string name="changePresentationFlag">change_presentation_flag</string>
    <string name="save">Сохранить</string>

    <string name="change">"Редактировать"</string>
    <string name="no">"Нет"</string>
    <string name="remove">"Удалить"</string>

    <!-- For Change Presentation -->
    <string name="request_for_remove_presentation">"Вы действительно хотите удалить презентацию "</string>
    <string name="name_of_pres">Название презентации: </string>
    <string name="cur_training_title">Текущая тренировка: </string>
    <string name="date_and_time_to_start_training">Дата и время начала: </string>
    <string name="time_of_training">Длительность тренировки: </string>
    <string name="worked_out_a_slide">Проработано слайдов / всего слайдов: </string>
    <string name="time_limit_training">Ограничение времени на доклад: </string>
    <string name="num_of_words_spoken">Слов сказано: </string>


    <!-- Example settings for Shared Picture -->
    <string name="training_duration">Длительность тренировки: </string>
    <string name="earnings_of_training">Оценка за тренировку: </string>
    <string name="exercise_time_factor">Попадание в регламент: </string>
...
    <string name="getting_into_the_regulations">Попали в регламент / всего: </string>
    <string name="mean_deviation_from_the_limit">Среднее отклонение от ограничения: </string>
    <string name="max_training_time">Максимальное время тренировки: </string>
    <string name="min_training_time">Минимальное время тренировки: </string>

    <string name="average_time">Среднее время тренировки: </string>
    <string name="total_words_count">Сказано слов всего: </string>
    <string name="average_earning_1">Средняя / минимальная</string>
    <string name="average_earning_2">/ максимальная оценка: </string>
    <string name="scores">баллов</string>
    <string name="training_statistics_directory">training_statistics</string>
    <string name="error_creating_text_file">Ошибка в создании текстового файла</string>
    <string name="successful_export_statistics">Статистика успешно сохранена в дирректорию</string>
...

    <string name="error_accessing_training_slides">Ошибка в получении доступа слайдам тренировки</string>
    <string name="error_accessing_the_training_list_or_presentation_data">Ошибка в получении доступа к списку тренировок или presentationData</string>
    <string name="pause">Пауза</string>
    <string name="continue_">Продолжить</string>

    <string name="setNumber_function_information">Set the passed number into the NumberPicker</string>
    <string name="you_dont_end_training">Вы не завершили данную тренировку.</string>
    <string name="continue_training">Продолжить тренировку</string>
    <string name="go_to_statistics">Перейти к статистике</string>

    <!-- Example settings for Tests -->
    <string name="training_not_end">Тренировка не окончена !</string>
...
