...
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp">


                <EditText
                    android:id="@+id/presentationName"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/enter_presentation_name"
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <NumberPicker
                        android:focusable="false"
                        android:clickable="false"
                        android:id="@+id/numberPicker1"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>
            </FrameLayout>
...
                    android:text="@string/presentation_date"
                    android:layout_gravity="center|top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner">
                </DatePicker>
...
                android:layout_gravity="center_horizontal"
                android:text="@string/notifications"
                android:layout_marginTop="-16dp"
                android:layout_marginBottom="3dp"/>

            <android.support.v7.widget.CardView
                android:id="@+id/addPresentation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:foreground="@drawable/card_foreground"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="2dp"
...
